--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.stl filter=lfs diff=lfs merge=lfs -text
+*.dxf filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs diff=lfs merge=lfs -text
+*.reg filter=lfs diff=lfs merge=lfs -text
